--- a/Lab6/src/main/resources/application.properties
+++ b/Lab6/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=Lab6
+spring.application.name=Java5
+spring.datasource.url=jdbc:sqlserver://localhost;database=WebShop;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=12345678
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+spring.thymeleaf.cache=false
