TS01072_NguyenGiaHung_Lab8

--- a/Lab8/src/main/resources/application.properties
+++ b/Lab8/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=Lab8
+spring.application.name=java5
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=WebShop;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=12345678
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto = none
+
+ #JavaMailSender - https://myaccount.google.com/apppasswords
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hungngts01072@fpt.edu.vn
+spring.mail.password=pdpy vdjy nlva svov
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
